# cxx-json-benchmark

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  LICENSE  README.md  checkout_thirdparty.sh  compile.sh  pull_thirdparty.sh  run_test_abort.sh
reports/: active_test_names.md  conformance.csv  memory_leaks.md  performance_linux64_gcc9.3.csv
reports/statistics/: Stringify2-Qt (C++)-citm_catalog.md  Stringify2-Qt (C++)-twitter.md  Stringify2-SimpleJSON (C++)-twitter.md  Stringify2-Vinenthz libjson (C)-citm_catalog.md  Stringify2-Vinenthz libjson (C)-twitter.md  Stringify2-boostjson (C++11)-canada.md  Stringify2-boostjson (C++11)-citm_catalog.md  Stringify2-boostjson (C++11)-twitter.md  Stringify2-nbsdx SimpleJSON (C++11)-canada.md  Stringify2-nbsdx SimpleJSON (C++11)-citm_catalog.md  Stringify2-nbsdx SimpleJSON (C++11)-twitter.md  Stringify2-yyjson (C)-canada.md  Stringify2-yyjson (C)-citm_catalog.md  Stringify2-yyjson (C)-twitter.md
result/: conformance.csv  conformance.html  conformance.php  conformance_Arduino Json (C++).md  conformance_C++ REST SDK (C++11).md  conformance_CAJUN (C++).md  conformance_Centijson (C).md  conformance_Configuru (C++11).md  conformance_FastJson (C++).md  conformance_JSON Spirit (C++).md  conformance_JSON Voorhees (C++).md  conformance_JeayeSON (C++14).md  conformance_JsonBox (C++).md  conformance_JsonCpp (C++).md  conformance_Nlohmann (C++11).md  conformance_POCO (C++).md  conformance_PicoJSON (C++).md  conformance_Qt (C++).md  conformance_RapidJSON (C++).md  conformance_RapidJSON AutoUTF (C++).md  conformance_RapidJSON FullPrec (C++).md  conformance_RapidJSON Insitu (C++).md  conformance_RapidJSON Iterative (C++).md  conformance_Sheredom json.h (C).md  conformance_SimpleJSON (C++).md  conformance_Vinenthz libjson (C).md  conformance_boostjson (C++11).md  conformance_cJSON (C).md  conformance_ccan json (C).md  conformance_dropbox json11 (C++11).md  conformance_gason (C++11).md  conformance_hjiang JSON++ (C++).md  conformance_jsmn (C).md  conformance_json-c (C).md  conformance_jsoncons (C++).md  conformance_juson (C).md  conformance_mikeando FastJson (C++).md  conformance_nbsdx SimpleJSON (C++11).md  conformance_sajson (C++).md  conformance_simdjson.md  (+7 more)
src/: main.cpp  main.cpp-failed  memorystat.h  memorystat_c.h  reports.cpp  reports.h  resultfilename.h  test.h  timer.h
src/cjsonlibs/: ccan_all.c  centijson_all.c  cjson_all.c  facil.io_all.c  jansson_all.c  jsonc_all.c  juson_all.c  parson_all.c  pjson_all.c  qajson4c_all.c  sheredom_jsonh_all.c  udpjson_all.c  ujson4c_all.c  ultrajsondec_all.c  vincenthz_libjson_all.c  yajl_all.c  yyjson_all.c
src/tests/: ULibtest.cpp  arduinojsontest.cpp  boostjsontest.cpp  cajuntest.cpp  ccantest.cpp  centijsontest.cpp  cjsontest.cpp  configurutest.cpp  cpprestsdktest.cpp  dropboxjson11test.cpp  facil.io.cpp  fastjsontest.cpp  follytest.cpp  gasontest.cpp  janssontest.cpp  jeayesontest.cpp  jsmntest.cpp  jsonboxtest.cpp  jsonconstest.cpp  jsoncpptest.cpp  jsonctest.cpp  jsonspirittest.cpp  jsonxxtest.cpp  jusontest.cpp  jvartest.cpp  jzontest.cpp  nbsdxsimplejsontest.cpp  nlohmanntest.cpp  parsontest.cpp  picojsontest.cpp  pjsontest.cpp  pocotest.cpp  qajson4ctest.cpp  qttest.cpp  rapidjsonautoutftest.cpp  rapidjsonfullprectest.cpp  rapidjsoninsitutest.cpp  rapidjsoniterativetest.cpp  rapidjsontest.cpp  sajsontest.cpp  (+16 more)
